Add x-feature-slug header: accept, propagate downstream, add DB column
